--- a/2024.02.25/14-Selma/package.json
+++ b/2024.02.25/14-Selma/package.json
@@ -1,18 +1,16 @@
 {
-    "name": "infonodejshomework",
-    "version": "1.0.0",
-    "type": "module",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "nodemon": "^3.1.0"
-    }
+  "name": "homeworks-1",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "3.1.0"
   }
-  
+}
